# briolette_cbdc_paper

src/simulation/briolettesim/: .cursorignore  .gitignore  Cargo.toml  README.md  dhat-heap.json  sobol_params.txt
src/simulation/briolettesim/docs_folder/: CHART_TYPES_NEEDED.md  FILE_STRUCT.md
src/simulation/briolettesim/graphs/: barabasi_albert_8_m.txt  barabasi_albert_test.txt  watts-strogatz-11-connections.txt  watts-strogatz-13-connections.txt  watts-strogatz-14-connections.txt  watts-strogatz-2-connections.txt  watts-strogatz-4-connections.txt  watts-strogatz-6-connections.txt  watts-strogatz-8-connections.txt  watts-strogatz.txt
src/simulation/briolettesim/results/: .gitignore  experiment_results.txt  experiment_results_model_Rural_ratio_2_topup_15_tickets_8_config_64.txt  pic_generator.py  sobol.py  sobol_params_1024.txt  sobol_params_2048.txt  sobol_params_4d.txt  test.py  utils.py
src/simulation/briolettesim/results/plot_results_p2p_p2m/: plot.py
src/simulation/briolettesim/results/runs_1.5k/: experiment_results_model_Rural_ratio_10_topup_15_tickets_8.txt  experiment_results_model_Rural_ratio_1_topup_15_tickets_8.txt  experiment_results_model_Rural_ratio_2_topup_15_tickets_8.txt  experiment_results_model_Rural_ratio_2_topup_20_tickets_20.txt  experiment_results_model_Rural_ratio_2_topup_50_tickets_50.txt  experiment_results_model_Rural_ratio_2_topup_5_tickets_8.txt  experiment_results_model_Rural_ratio_4_topup_15_tickets_8.txt  (+7 more)
src/simulation/briolettesim/src/: graph_utils.rs  main.rs  simulator.rs  utils.rs
(+2935 files in other folders)
