[package]
name = "briolette-sim"
version = "0.1.0"   
edition = "2021"

# [profile.release]
# debug = 1

# [features]
# dhat-heap = []    # if you are doing heap profiling
# dhat-ad-hoc = []  # if you are doing ad hoc profiling

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
dhat = "0.3.3"
absim = { path = "../absim", version = "0.1.0" }
levy_distr = { path = "../levy_distr", version = "0.1.0" }
rand_flight = { path = "../rand_flight", version = "0.1.0" }
pprof = { version = "0.14", features = ["flamegraph"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
rayon = "1.8"
